<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Botones">

    <LinearLayout
        android:id="@+id/l1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="490dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/teal_700"
            app:cardCornerRadius="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn1"
                android:background="@android:color/transparent"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatButton>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/l1"
        app:layout_constraintEnd_toEndOf="@+id/l1"
        app:layout_constraintTop_toBottomOf="@+id/l1"
        android:gravity="center"
        android:layout_marginTop="27dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/teal_700"
            app:cardCornerRadius="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn2"
                android:background="@android:color/transparent"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatButton>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/l2"
        app:layout_constraintEnd_toEndOf="@+id/l2"
        app:layout_constraintTop_toBottomOf="@+id/l2"
        android:gravity="center"
        android:layout_marginTop="27dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/teal_700"
            app:cardCornerRadius="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/btn3"
                android:textSize="30sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatButton>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/l3"
        app:layout_constraintEnd_toEndOf="@+id/l3"
        app:layout_constraintTop_toBottomOf="@+id/l3"
        android:gravity="center"
        android:layout_marginTop="27dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/teal_700"
            app:cardCornerRadius="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/btn4"
                android:textSize="30sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatButton>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/l5"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/l4"
        app:layout_constraintEnd_toEndOf="@+id/l4"
        app:layout_constraintTop_toBottomOf="@+id/l4"
        android:gravity="center"
        android:layout_marginTop="27dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/teal_700"
            app:cardCornerRadius="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn5"
                android:background="@android:color/transparent"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatButton>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/txtOculto"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="@+id/l5"
        app:layout_constraintEnd_toEndOf="@+id/l5"
        app:layout_constraintTop_toBottomOf="@+id/l5"
        android:text="@string/txtOculto"
        android:gravity="center"
        android:textSize="40dp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        >
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>